# PjDemo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/jl/pjdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_jl_pjdemo_PjJni.cpp  com_jl_pjdemo_PjJni.h  jni_cb.cpp  jni_cb.h  jni_log.cpp  jni_log.h  jni_utils.cpp  jni_utils.h  pjutils.cpp  pjutils.h  pjwrapper.cpp  pjwrapper.h
app/src/main/cpp/pjcommon/: pj_cb.cpp  pj_cb.h  pj_obj.cpp  pj_obj.h  pj_thread.cpp  pj_thread.h  pj_trans.cpp  pj_trans.h  pj_utils.cpp  pj_utils.h
app/src/main/cpp/pjlib/include/pj/: config_site.h
app/src/main/cpp/pjlib/include/pj/compat/: os_auto.h
app/src/main/java/com/jl/pjdemo/: MainActivity.java  MyApp.java  PjCb.java  PjJni.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jl/pjdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
